Singleton & Crashlytics logging part 2